deployments/epp/automation-staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epp
  namespace: epp--automation-staging
  labels:
    app_name: epp
    app_env: automation-staging
spec:
  rules:
  - host: automation-staging--epp.elifesciences.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: epp-client
            port:
              number: 3000
      - pathType: Prefix
        path: "/iiif"
        backend:
          service:
            name: epp-image-server
            port:
              number: 8182
